--- a/ActivityWebsite/Views/Account/Register.cshtml
+++ b/ActivityWebsite/Views/Account/Register.cshtml
@@ -28,7 +28,7 @@
             </div>
         }
 
-        <div style="padding: 0 600px;">
+        <div class="">
             <div class="form-group">
                 @Html.LabelFor(m => m.Username, new { @class = "form-label" })
                 @Html.TextBoxFor(m => m.Username, new { @class = "form-input", @id = "name", @placeholder = "Eg: jonhdoe123" })
